[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lwrclpy"
version = "0.1.0"
description = "rclpy-compatible API on top of eProsima Fast DDS and lwrcl"
readme = "README.md"
authors = [{ name = "Tatsuya Ishikawa" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
# Fast DDS の Python バインディングは PyPI 提供がないため明示依存は記載しません
# 実行時に import チェックで案内します

[tool.setuptools]
packages = ["lwrclpy"]
include-package-data = true